Compose game screen (WIP)

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,10 +12,11 @@
 # Default value: -Xmx10248m -XX:MaxPermSize=256m
 android.enableJetifier=true
 android.useAndroidX=true
-org.gradle.jvmargs=-Xmx4g -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx4g -Dfile.encoding=UTF-8 -XX:+UseParallelGC
 org.gradle.daemon=true
 org.gradle.parallel=true
 org.gradle.configureondemand=true
+org.gradle.unsafe.configuration-cache=true
 
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
