--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,7 +84,7 @@ dependencies {
 
     implementation "com.google.android.gms:play-services-auth:$play_services_version"
 
-    implementation "io.coil-kt:coil-compose:1.3.2"
+    implementation "io.coil-kt:coil-compose:1.4.0"
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.2'
     implementation 'com.squareup.okhttp3:okhttp-urlconnection:4.9.2'
     implementation 'com.github.franmontiel:PersistentCookieJar:v1.0.1'
@@ -92,9 +92,9 @@ dependencies {
     implementation 'com.squareup.moshi:moshi-kotlin:1.11.0'
     implementation 'com.squareup.moshi:moshi-adapters:1.11.0'
 
-    implementation "androidx.navigation:navigation-fragment-ktx:2.5.0-alpha03"
-    implementation "androidx.navigation:navigation-ui-ktx:2.5.0-alpha03"
-    implementation "androidx.core:core-ktx:1.9.0-alpha01"
+    implementation "androidx.navigation:navigation-fragment-ktx:2.5.0-beta01"
+    implementation "androidx.navigation:navigation-ui-ktx:2.5.0-beta01"
+    implementation "androidx.core:core-ktx:1.9.0-alpha03"
 
     // rxandroid
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
@@ -103,8 +103,8 @@ dependencies {
     implementation 'com.jakewharton.rxrelay2:rxrelay:2.1.1'
     implementation 'io.reactivex.rxjava2:rxkotlin:2.4.0'
 
-    implementation "androidx.work:work-runtime-ktx:2.8.0-alpha01"
-    implementation "androidx.work:work-rxjava2:2.8.0-alpha01"
+    implementation "androidx.work:work-runtime-ktx:2.8.0-alpha02"
+    implementation "androidx.work:work-rxjava2:2.8.0-alpha02"
 
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
 
@@ -159,6 +159,7 @@ dependencies {
 
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-rxjava2:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
 
     implementation 'com.jakewharton.threetenabp:threetenabp:1.3.1'
     implementation 'com.github.cpiz:BubbleView:1.0.3'
