--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,11 +70,10 @@ dependencies {
     def accompanist_version = '0.24.2-alpha'
     def room_version = '2.4.2'
     def firebase_version = '29.2.1'
-    def emoji2_version = "1.2.0-alpha03"
+    def emoji2_version = "1.2.0-alpha04"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     implementation platform("com.google.firebase:firebase-bom:$firebase_version")
     // retrofit
@@ -92,9 +91,9 @@ dependencies {
     implementation 'com.squareup.moshi:moshi-kotlin:1.11.0'
     implementation 'com.squareup.moshi:moshi-adapters:1.11.0'
 
-    implementation "androidx.navigation:navigation-fragment-ktx:2.5.0-beta01"
-    implementation "androidx.navigation:navigation-ui-ktx:2.5.0-beta01"
-    implementation "androidx.core:core-ktx:1.9.0-alpha03"
+    implementation "androidx.navigation:navigation-fragment-ktx:2.5.0-rc01"
+    implementation "androidx.navigation:navigation-ui-ktx:2.5.0-rc01"
+    implementation "androidx.core:core-ktx:1.9.0-alpha04"
 
     // rxandroid
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
@@ -108,15 +107,15 @@ dependencies {
 
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
 
-    implementation 'com.facebook.stetho:stetho:1.5.1'
+    implementation 'com.facebook.stetho:stetho:1.6.0'
     implementation 'com.facebook.stetho:stetho-okhttp3:1.5.1'
 
     // groupie
     implementation 'com.xwray:groupie:2.8.1'
     implementation 'com.xwray:groupie-viewbinding:2.8.1'
 
-    implementation 'com.google.android.material:material:1.6.0-alpha03'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'com.google.android.material:material:1.7.0-alpha02'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation "androidx.emoji2:emoji2:$emoji2_version"
     implementation "androidx.emoji2:emoji2-views:$emoji2_version"
@@ -129,8 +128,6 @@ dependencies {
 
     implementation 'me.zhanghai.android.materialprogressbar:library:1.6.1'
 
-    implementation 'com.github.blennerSilva:AwesomeDialog:2.0.6'
-
     implementation('io.socket:socket.io-client:2.0.1') {
         // excluding org.json which is provided by Android
         exclude group: 'org.json', module: 'json'
@@ -140,7 +137,7 @@ dependencies {
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
 
-    implementation 'com.jakewharton.rxbinding2:rxbinding:2.2.0'
+    implementation 'com.jakewharton.rxbinding3:rxbinding:3.0.0'
 
     implementation 'br.com.simplepass:loading-button-android:2.1.5'
     implementation 'com.google.firebase:firebase-analytics-ktx'
