--- a/build.gradle
+++ b/build.gradle
@@ -2,15 +2,15 @@
 
 buildscript {
     ext {
-        compose_version = '1.2.0-alpha08'
-        kotlin_version = "1.6.20"
+        compose_version = '1.2.0-beta02'
+        kotlin_version = "1.6.21"
     }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.2.0'
+        classpath 'com.android.tools.build:gradle:7.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
 
@@ -18,7 +18,7 @@ buildscript {
         // in the individual module build.gradle files
         classpath 'com.google.gms:google-services:4.3.10'
 
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.7.0'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.8.1'
 
         classpath "org.koin:koin-gradle-plugin:2.2.1"
     }
