--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,10 +27,13 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+        debug {
+            applicationIdSuffix ".debug"
+        }
     }
     compileOptions {
-        targetCompatibility 1.8
-        sourceCompatibility 1.8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
     tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
         kotlinOptions {
@@ -43,7 +46,7 @@ android {
         }
     }
     kotlinOptions {
-        jvmTarget = "1.8"
+        jvmTarget = JavaVersion.VERSION_11
         useIR = true
     }
     buildFeatures {
@@ -51,7 +54,8 @@ android {
         viewBinding true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion compose_version
+        kotlinCompilerExtensionVersion = kotlin_compiler_extension_version
+        kotlinCompilerVersion = kotlin_version
     }
     externalNativeBuild {
         cmake {
@@ -71,7 +75,7 @@ dependencies {
     def accompanist_version = '0.24.2-alpha'
     def room_version = '2.4.2'
     def firebase_version = '29.2.1'
-    def emoji2_version = "1.2.0-alpha04"
+    def emoji2_version = "1.2.0-beta01"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.4.2'
@@ -112,17 +116,17 @@ dependencies {
     implementation 'com.facebook.stetho:stetho-okhttp3:1.5.1'
 
     // groupie
-    implementation 'com.xwray:groupie:2.8.1'
-    implementation 'com.xwray:groupie-viewbinding:2.8.1'
+    implementation 'com.github.lisawray.groupie:groupie:2.8.1'
+    implementation 'com.github.lisawray.groupie:groupie-viewbinding:2.8.1'
 
-    implementation 'com.google.android.material:material:1.7.0-alpha02'
+    implementation 'com.google.android.material:material:1.7.0-alpha03'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation "androidx.emoji2:emoji2:$emoji2_version"
     implementation "androidx.emoji2:emoji2-views:$emoji2_version"
     implementation "androidx.emoji2:emoji2-views-helper:$emoji2_version"
     implementation 'androidx.legacy:legacy-preference-v14:1.0.0'
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.1"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.0"
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
     implementation "androidx.activity:activity-compose:1.5.0"
@@ -141,7 +145,7 @@ dependencies {
 
     implementation 'com.jakewharton.rxbinding3:rxbinding:3.0.0'
 
-    implementation 'br.com.simplepass:loading-button-android:2.1.5'
+//    implementation 'br.com.simplepass:loading-button-android:2.1.5'
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-crashlytics'
     implementation 'com.google.firebase:firebase-messaging'
@@ -149,7 +153,7 @@ dependencies {
     implementation 'io.noties.markwon:core:4.3.1'
 
     implementation 'com.github.bumptech.glide:glide:4.11.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
     implementation "io.insert-koin:koin-android:$koin_version"
