--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,7 +55,6 @@ android {
     }
     composeOptions {
         kotlinCompilerExtensionVersion = kotlin_compiler_extension_version
-        kotlinCompilerVersion = kotlin_version
     }
     externalNativeBuild {
         cmake {
@@ -70,10 +69,10 @@ android {
 }
 
 dependencies {
-    def koin_version = '3.2.0-beta-1'
+    def koin_version = '3.2.0'
     def play_services_version = '19.2.0'
     def accompanist_version = '0.24.2-alpha'
-    def room_version = '2.4.2'
+    def room_version = '2.5.0-alpha02'
     def firebase_version = '29.2.1'
     def emoji2_version = "1.2.0-beta01"
 
