--- a/build.gradle
+++ b/build.gradle
@@ -2,16 +2,16 @@
 
 buildscript {
     ext {
-        compose_version = '1.2.0-rc02' // can't update this further until Molecule gets an update to support kotlin 1.7
-        kotlin_compiler_extension_version = '1.1.0'
-        kotlin_version = "1.6.10"
+        compose_version = '1.3.0-alpha02'
+        kotlin_compiler_extension_version = '1.3.0-beta01'
+        kotlin_version = "1.7.10"
     }
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.4.0-alpha08'
+        classpath 'com.android.tools.build:gradle:7.4.0-alpha09'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
 
@@ -23,7 +23,7 @@ buildscript {
 
         classpath "io.insert-koin:koin-gradle-plugin:3.2.0"
 
-        classpath "app.cash.molecule:molecule-gradle-plugin:0.2.0"
+        classpath "app.cash.molecule:molecule-gradle-plugin:0.4.0-beta01"
     }
 }
 
