--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,6 +89,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
 
     implementation "com.google.android.gms:play-services-auth:$play_services_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-collections-immutable:0.3.5"
 
     implementation "io.coil-kt:coil-compose:2.1.0"
     implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0'
