--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,7 @@ android {
         viewBinding true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion = kotlin_compiler_extension_version
+        kotlinCompilerExtensionVersion = "1.3.2"
     }
     externalNativeBuild {
         cmake {
@@ -73,14 +73,22 @@ android {
 
 dependencies {
     def koin_version = '3.2.0'
-    def play_services_version = '20.2.0'
+    def play_services_version = '20.4.0'
     def accompanist_version = '0.24.13-rc'
-    def room_version = '2.5.0-alpha02'
+    def room_version = '2.5.0-rc01'
     def firebase_version = '29.2.1'
-    def emoji2_version = "1.2.0-rc01"
+    def emoji2_version = "1.2.0"
+    def composeBom = platform('androidx.compose:compose-bom:2022.12.00')
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.4.2'
+
+    implementation composeBom
+    implementation "androidx.compose.material:material"
+    implementation 'androidx.compose.material:material-icons-extended'
+    implementation "androidx.compose.ui:ui-tooling-preview"
+    implementation "androidx.compose.ui:ui-util"
+
+    implementation 'androidx.appcompat:appcompat:1.5.1'
 
     implementation platform("com.google.firebase:firebase-bom:$firebase_version")
     // retrofit
@@ -99,9 +107,9 @@ dependencies {
     implementation 'com.squareup.moshi:moshi-kotlin:1.11.0'
     implementation 'com.squareup.moshi:moshi-adapters:1.11.0'
 
-    implementation "androidx.navigation:navigation-fragment-ktx:2.5.1"
-    implementation "androidx.navigation:navigation-ui-ktx:2.5.1"
-    implementation "androidx.core:core-ktx:1.9.0-alpha05"
+    implementation "androidx.navigation:navigation-fragment-ktx:2.5.3"
+    implementation "androidx.navigation:navigation-ui-ktx:2.5.3"
+    implementation "androidx.core:core-ktx:1.9.0"
 
     // rxandroid
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
@@ -110,8 +118,8 @@ dependencies {
     implementation 'com.jakewharton.rxrelay2:rxrelay:2.1.1'
     implementation 'io.reactivex.rxjava2:rxkotlin:2.4.0'
 
-    implementation "androidx.work:work-runtime-ktx:2.8.0-alpha02"
-    implementation "androidx.work:work-rxjava2:2.8.0-alpha02"
+    implementation "androidx.work:work-runtime-ktx:2.8.0-rc01"
+    implementation "androidx.work:work-rxjava2:2.8.0-rc01"
 
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
 
@@ -122,16 +130,14 @@ dependencies {
     implementation 'com.github.lisawray.groupie:groupie:2.8.1'
     implementation 'com.github.lisawray.groupie:groupie-viewbinding:2.8.1'
 
-    implementation 'com.google.android.material:material:1.7.0-alpha03'
+    implementation 'com.google.android.material:material:1.8.0-rc01'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation "androidx.emoji2:emoji2:$emoji2_version"
     implementation "androidx.emoji2:emoji2-views:$emoji2_version"
     implementation "androidx.emoji2:emoji2-views-helper:$emoji2_version"
     implementation 'androidx.legacy:legacy-preference-v14:1.0.0'
-    implementation "androidx.compose.material:material-icons-extended:$compose_version"
-    implementation "androidx.activity:activity-compose:1.5.1"
-    implementation "androidx.compose.ui:ui-util:$compose_version"
+    implementation "androidx.activity:activity-compose:1.6.1"
 
     implementation 'me.zhanghai.android.materialprogressbar:library:1.6.1'
 
@@ -139,10 +145,6 @@ dependencies {
         // excluding org.json which is provided by Android
         exclude group: 'org.json', module: 'json'
     }
-
-    implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.material:material:$compose_version"
-    implementation "androidx.compose.ui:ui-tooling:$compose_version"
 
     implementation 'com.jakewharton.rxbinding3:rxbinding:3.0.0'
 
@@ -173,7 +175,7 @@ dependencies {
 
     kapt "androidx.room:room-compiler:$room_version"
 
-    implementation 'androidx.test.espresso:espresso-idling-resource:3.4.0'
+    implementation 'androidx.test.espresso:espresso-idling-resource:3.5.1'
 
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
@@ -181,6 +183,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     testImplementation "io.insert-koin:koin-test-junit4:$koin_version"
 
+    androidTestImplementation composeBom
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test:runner:1.4.0'
