--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,10 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-kapt'
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.google.firebase.crashlytics'
 apply plugin: 'koin'
 apply plugin: 'app.cash.molecule'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 33
@@ -55,7 +55,7 @@ android {
             freeCompilerArgs += "-opt-in=androidx.compose.foundation.ExperimentalFoundationApi"
             freeCompilerArgs += "-opt-in=androidx.compose.ui.ExperimentalComposeUiApi"
             freeCompilerArgs += "-opt-in=com.google.accompanist.pager.ExperimentalPagerApi"
-            freeCompilerArgs += '-Xjvm-default=enable'
+            freeCompilerArgs += '-Xjvm-default=all'
         }
     }
     kotlinOptions {
@@ -82,12 +82,12 @@ android {
 
 dependencies {
     def koin_version = '3.2.0'
-    def play_services_version = '20.4.0'
-    def accompanist_version = '0.24.13-rc'
-    def room_version = '2.5.0-rc01'
+    def play_services_version = '20.4.1'
+    def accompanist_version = '0.27.0'
+    def room_version = '2.5.0'
     def firebase_version = '29.2.1'
     def emoji2_version = "1.2.0"
-    def composeBom = platform('androidx.compose:compose-bom:2022.12.00')
+    def composeBom = platform('androidx.compose:compose-bom:2023.01.00')
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
@@ -96,8 +96,9 @@ dependencies {
     implementation 'androidx.compose.material:material-icons-extended'
     implementation "androidx.compose.ui:ui-tooling-preview"
     implementation "androidx.compose.ui:ui-util"
+    debugImplementation "androidx.compose.ui:ui-tooling"
 
-    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'androidx.appcompat:appcompat:1.6.0'
 
     implementation platform("com.google.firebase:firebase-bom:$firebase_version")
     // retrofit
@@ -113,14 +114,13 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp-urlconnection:4.10.0'
     implementation 'com.github.franmontiel:PersistentCookieJar:v1.0.1'
 
-    implementation 'com.squareup.moshi:moshi-kotlin:1.11.0'
-    implementation 'com.squareup.moshi:moshi-adapters:1.11.0'
+    implementation 'com.squareup.moshi:moshi-kotlin:1.13.0'
+    implementation 'com.squareup.moshi:moshi-adapters:1.13.0'
 
     implementation "androidx.navigation:navigation-fragment-ktx:2.5.3"
     implementation "androidx.navigation:navigation-ui-ktx:2.5.3"
     implementation "androidx.core:core-ktx:1.9.0"
 
-    // rxandroid
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
     implementation 'io.reactivex.rxjava2:rxkotlin:2.4.0'
@@ -136,10 +136,10 @@ dependencies {
     implementation 'com.facebook.stetho:stetho-okhttp3:1.5.1'
 
     // groupie
-    implementation 'com.github.lisawray.groupie:groupie:2.8.1'
+    implementation 'com.github.lisawray.groupie:groupie:2.9.0'
     implementation 'com.github.lisawray.groupie:groupie-viewbinding:2.8.1'
 
-    implementation 'com.google.android.material:material:1.8.0-rc01'
+    implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation "androidx.emoji2:emoji2:$emoji2_version"
@@ -157,7 +157,6 @@ dependencies {
 
     implementation 'com.jakewharton.rxbinding3:rxbinding:3.0.0'
 
-//    implementation 'br.com.simplepass:loading-button-android:2.1.5'
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-crashlytics'
     implementation 'com.google.firebase:firebase-messaging'
@@ -193,10 +192,10 @@ dependencies {
     testImplementation "io.insert-koin:koin-test-junit4:$koin_version"
 
     androidTestImplementation composeBom
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test:runner:1.4.0'
-    androidTestImplementation 'androidx.test:rules:1.4.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test:runner:1.5.2'
+    androidTestImplementation 'androidx.test:rules:1.5.0'
 }
 repositories {
     mavenCentral()
