--- a/gradle.properties
+++ b/gradle.properties
@@ -19,6 +19,7 @@ org.gradle.configureondemand=true
 org.gradle.unsafe.configuration-cache=true
 android.defaults.buildfeatures.buildconfig=true
 android.nonTransitiveRClass=false
+android.nonFinalResIds=false
 
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
