--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,7 @@ android {
         release {
             minifyEnabled true
             shrinkResources true
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             firebaseCrashlytics {
                 mappingFileUploadEnabled true
             }
@@ -85,7 +85,7 @@ dependencies {
     def play_services_version = '20.4.1'
     def accompanist_version = '0.27.0'
     def room_version = '2.5.0'
-    def firebase_version = '29.2.1'
+    def firebase_version = '31.2.0'
     def emoji2_version = "1.2.0"
     def composeBom = platform('androidx.compose:compose-bom:2023.01.00')
 
