--- a/build.gradle
+++ b/build.gradle
@@ -9,19 +9,19 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.1.0-alpha04'
+        classpath 'com.android.tools.build:gradle:8.1.0-alpha05'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        classpath 'com.google.gms:google-services:4.3.13'
+        classpath 'com.google.gms:google-services:4.3.15'
 
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.1'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.4'
 
         classpath "io.insert-koin:koin-gradle-plugin:3.2.0"
 
-        classpath "app.cash.molecule:molecule-gradle-plugin:0.4.0-beta01"
+        classpath "app.cash.molecule:molecule-gradle-plugin:0.7.0"
     }
 }
 
