--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,10 +79,10 @@ android {
 dependencies {
     def koin_version = '3.2.0'
     def play_services_version = '20.4.1'
-    def accompanist_version = '0.27.0'
+    def accompanist_version = '0.29.1-alpha'
     def room_version = '2.5.0'
     def firebase_version = '31.2.0'
-    def emoji2_version = "1.2.0"
+    def emoji2_version = "1.3.0-beta03"
     def composeBom = platform('androidx.compose:compose-bom:2023.01.00')
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -93,6 +93,10 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview"
     implementation "androidx.compose.ui:ui-util"
     debugImplementation "androidx.compose.ui:ui-tooling"
+
+    implementation "com.google.accompanist:accompanist-placeholder-material:$accompanist_version"
+    implementation "com.google.accompanist:accompanist-pager:$accompanist_version"
+    implementation "com.google.accompanist:accompanist-pager-indicators:$accompanist_version"
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
 
@@ -105,12 +109,12 @@ dependencies {
     implementation "com.google.android.gms:play-services-auth:$play_services_version"
     implementation "org.jetbrains.kotlinx:kotlinx-collections-immutable:0.3.5"
 
-    implementation "io.coil-kt:coil-compose:2.1.0"
+    implementation "io.coil-kt:coil-compose:2.2.2"
     implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0'
     implementation 'com.github.franmontiel:PersistentCookieJar:v1.0.1'
 
-    implementation 'com.squareup.moshi:moshi-kotlin:1.13.0'
-    implementation 'com.squareup.moshi:moshi-adapters:1.13.0'
+    implementation 'com.squareup.moshi:moshi-kotlin:1.14.0'
+    implementation 'com.squareup.moshi:moshi-adapters:1.14.0'
 
     implementation "androidx.navigation:navigation-fragment-ktx:2.5.3"
     implementation "androidx.navigation:navigation-ui-ktx:2.5.3"
@@ -170,11 +174,8 @@ dependencies {
     implementation "androidx.room:room-rxjava2:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
 
-    implementation 'com.jakewharton.threetenabp:threetenabp:1.4.0'
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.4.4'
     implementation 'com.github.cpiz:BubbleView:1.0.3'
-
-    implementation "com.google.accompanist:accompanist-pager:$accompanist_version"
-    implementation "com.google.accompanist:accompanist-pager-indicators:$accompanist_version"
 
     ksp "androidx.room:room-compiler:$room_version"
 
