--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,15 +83,17 @@ dependencies {
     def room_version = '2.5.0'
     def firebase_version = '31.2.0'
     def emoji2_version = "1.3.0-beta03"
-    def composeBom = platform('androidx.compose:compose-bom:2023.01.00')
+//    def composeBom = platform('androidx.compose:compose-bom:2023.01.00')
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation composeBom
-    implementation "androidx.compose.material:material"
-    implementation 'androidx.compose.material:material-icons-extended'
-    implementation "androidx.compose.ui:ui-tooling-preview"
-    implementation "androidx.compose.ui:ui-util"
+//    implementation composeBom
+    implementation "androidx.compose.material:material:1.4.0-beta02"
+    implementation 'androidx.compose.material:material-icons-extended:1.4.0-beta02'
+    implementation "androidx.compose.ui:ui-tooling-preview:1.4.0-beta02"
+    implementation "androidx.compose.ui:ui:1.4.0-beta02"
+    implementation "androidx.compose.ui:ui-util:1.4.0-beta02"
+
     debugImplementation "androidx.compose.ui:ui-tooling"
 
     implementation "com.google.accompanist:accompanist-placeholder-material:$accompanist_version"
@@ -187,7 +189,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     testImplementation "io.insert-koin:koin-test-junit4:$koin_version"
 
-    androidTestImplementation composeBom
+//    androidTestImplementation composeBom
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test:runner:1.5.2'
