--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,20 +84,21 @@ android {
 dependencies {
     def koin_version = '3.2.0'
     def play_services_version = '20.4.1'
-    def accompanist_version = '0.29.1-alpha'
+    def accompanist_version = '0.29.2-rc'
     def room_version = '2.5.0'
     def firebase_version = '31.2.0'
-    def emoji2_version = "1.3.0-beta03"
+    def emoji2_version = "1.3.0-rc01"
+    def compose_version = "1.4.0-rc01"
 //    def composeBom = platform('androidx.compose:compose-bom:2023.01.00')
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
 //    implementation composeBom
-    implementation "androidx.compose.material:material:1.4.0-beta02"
-    implementation 'androidx.compose.material:material-icons-extended:1.4.0-beta02'
-    implementation "androidx.compose.ui:ui-tooling-preview:1.4.0-beta02"
-    implementation "androidx.compose.ui:ui:1.4.0-beta02"
-    implementation "androidx.compose.ui:ui-util:1.4.0-beta02"
+    implementation "androidx.compose.material:material:$compose_version"
+    implementation "androidx.compose.material:material-icons-extended:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.ui:ui-util:$compose_version"
 
     debugImplementation "androidx.compose.ui:ui-tooling"
 
