--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,14 @@
 
 buildscript {
     ext {
+        compose_version = '1.3.0-alpha02'
+        kotlin_compiler_extension_version = '1.3.0-beta01'
         kotlin_version = "1.7.10"
     }
     repositories {
         google()
         mavenCentral()
+        maven { url "https://maven.localazy.com/repository/release/" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:8.1.0-alpha11'
@@ -22,6 +25,8 @@ buildscript {
         classpath "io.insert-koin:koin-gradle-plugin:3.2.0"
 
         classpath "app.cash.molecule:molecule-gradle-plugin:0.7.1"
+
+        classpath "com.localazy:gradle:1.5.4"
     }
 }
 plugins {
