--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,14 @@
         android:maxAspectRatio="10.0"
         >
         <meta-data android:name="android.max_aspect" android:value="10.0"/>
+
+        <meta-data
+            android:name="firebase_crashlytics_collection_enabled"
+            android:value="${crashlyticsCollectionEnabled}" />
+        <meta-data
+            android:name="firebase_analytics_collection_enabled"
+            android:value="${analyticsCollectionEnabled}" />
+
         <activity
             android:name="io.zenandroid.onlinego.ui.screens.main.MainActivity"
             android:exported="true"
