--- a/gradle.properties
+++ b/gradle.properties
@@ -18,6 +18,7 @@ org.gradle.parallel=true
 org.gradle.configureondemand=true
 org.gradle.unsafe.configuration-cache=true
 android.defaults.buildfeatures.buildconfig=true
+android.enableBuildConfigAsBytecode=true
 android.nonTransitiveRClass=false
 android.nonFinalResIds=false
 
