Refactor: Migrate blocking calls to background threads
This commit refactors several ViewModels and utility functions to ensure that potentially long-running or blocking operations are executed on background threads, preventing UI freezes and improving application responsiveness.

**Key Changes:**

*   **Coroutines for Background Tasks:**
    *   `JosekiExplorerViewModel`, `TutorialViewModel`, `TsumegoViewModel`, `AiGameViewModel`, and `FaceToFaceViewModel` now use `viewModelScope.launch(Dispatchers.Default)` or `viewModelScope.launch(Dispatchers.IO)` to offload state updates, position calculations, and other logic to background threads.
    *   `MyGamesViewModel` utilizes `rxSingle(Dispatchers.Default)` to ensure `computePositions` runs on a background thread when processing active and historic games from RxJava streams.
    *   `Position.fromJosekiPosition`, `RulesManager.replay`, `RulesManager.makeMove`, `RulesManager.buildPos`, and `Util.sgfToPositionList` are now `suspend` functions, indicating they perform potentially long-running work and should be called from a coroutine.
    *   `RulesManager.determineTerritory` and the `System.loadLibrary("estimator")` call within `RulesManager` now include checks to log an exception if they are inadvertently called on the main thread.
    *   `GameViewModel` now uses `viewModelScope.launch(Dispatchers.Default)` for handling cell taps in play, stone removal, and analysis modes.
*   **Dependency Update:**
    *   Added `kotlinx-coroutines-rx2` to `gradle/libs.versions.toml` to facilitate bridging RxJava with Kotlin Coroutines.
*   **Specific ViewModel Refactors:**
    *   **`AiGameViewModel`**: `restoreState` now uses `settingsRepository.aiGameStateFlow.first()` within a `Dispatchers.Default` coroutine. `onViewPaused` also performs JSON serialization in a coroutine. `onUserTappedCoordinate` and `onUserPressedPass` logic moved to `Dispatchers.Default` coroutine. AI move generation (KataGo) now processes results in a `Dispatc

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -38,6 +38,7 @@ rxjava = "2.2.21"
 rxandroid = "2.1.1"
 rxkotlin = "2.4.0"
 rxbinding = "3.1.0"
+kotlinxCoroutinesRx = "1.10.2"
 
 # Utility libraries
 markwon = "4.6.2"
@@ -126,6 +127,7 @@ rxjava = { group = "io.reactivex.rxjava2", name = "rxjava", version.ref = "rxjav
 rxandroid = { group = "io.reactivex.rxjava2", name = "rxandroid", version.ref = "rxandroid" }
 rxkotlin = { group = "io.reactivex.rxjava2", name = "rxkotlin", version.ref = "rxkotlin" }
 rxbinding = { group = "com.jakewharton.rxbinding3", name = "rxbinding", version.ref = "rxbinding" }
+kotlinx-coroutines-rx2 = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-rx2", version.ref = "kotlinxCoroutinesRx" }
 
 # Work Manager
 work-runtime-ktx = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "workManager" }
@@ -202,7 +204,8 @@ rx = [
     "rxjava",
     "rxandroid",
     "rxkotlin",
-    "rxbinding"
+    "rxbinding",
+    "kotlinx-coroutines-rx2"
 ]
 
 room = [
