Refactor: Improve game screen and active games logic
This commit introduces several changes to enhance the game screen UI and the underlying logic for active games and chat messages.

**ActiveGamesRepository.kt:**
- Modified `setActiveGames` to accept `userId` as a parameter instead of retrieving it from `userSessionRepository` within the function. This makes the `userId` explicit.
- Updated the Flow in `monitorActiveGamesWithNewMessagesCount` to emit a `Pair<Long, List<Game>>` (userId and games list) to provide the `userId` directly to `setActiveGames`.
- In `monitorGameFlow`, `refreshGameData(id)` is now called within `onStart` to ensure game data is refreshed when the Flow collection begins.

**GameUI.kt:**
- The `GameContent` Composable is now only rendered if `state.loading` is `false`, preventing UI rendering with incomplete data.

**GameViewModel.kt:**
- Game connection logic (`socketService.resendAuth()` and `socketService.connectToGame()`) is moved into a `viewModelScope.launch(Dispatchers.IO)` block.
- The `messagesFlow` now combines with `userSessionRepository.loggedInObservable.asFlow()` instead of `userIdObservable`. The `userId` for checking `fromUser` in `ChatMessage` is derived from `LoginStatus.LoggedIn`.
- The `userId` collected for UI state is now derived from `userSessionRepository.loggedInObservable` by mapping `LoginStatus.LoggedIn` to `userId`.
- Several UI elements (buttons like `nextGameButton`, `nextButton`, `chatButton`, and `versusStats` in `GameScreenState`) are now wrapped with `remember` to optimize recompositions based on their specific dependencies.

**AndroidManifest.xml:**
- Disabled automatic screen reporting for Google Analytics by setting `google_analytics_automatic_screen_reporting_enabled` to `false`.

**gradle/libs.versions.toml:**
- Updated various dependencies:
    - `compileSdk`: `35` to `36`
    - `composeBom`: `2025.06.01` to `2025.08.01`
    - `playServices`: `21.3.0` to `21.4.0`
    - `androidx-core`: `1.16.0` to `1.17

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,28 +4,28 @@ datastorePreferences = "1.1.7"
 kotlin = "2.2.0"
 androidGradlePlugin = "8.12.0-rc01"
 composeCompiler = "1.5.4"
-compileSdk = "35"
+compileSdk = "36"
 minSdk = "21"
 navigationCompose = "2.9.3"
 targetSdk = "35"
 ndkVersion = "25.1.8937393"
 
 # Compose BOM
-composeBom = "2025.06.01"
+composeBom = "2025.08.01"
 
 # Main dependencies
 koin = "4.1.0"
-playServices = "21.3.0"
+playServices = "21.4.0"
 accompanist = "0.36.0"
 room = "2.7.2"
 firebase = "33.16.0"
 workManager = "2.10.3"
-androidx-core = "1.16.0"
+androidx-core = "1.17.0"
 androidxCoreSplashscreen = "1.0.1"
 androidx-activity = "1.10.1"
-androidx-lifecycle = "2.9.2"
-material3 = "1.3.0"
-material = "1.12.0"
+androidx-lifecycle = "2.9.3"
+material3 = "1.4.0-beta03"
+material = "1.13.0"
 
 # Networking & Serialization
 retrofit = "3.0.0"
@@ -66,7 +66,7 @@ turbine = "1.2.1"
 # Build tools & Plugins
 ksp = "2.2.0-2.0.2"
 googleServices = "4.4.3"
-crashlytics = "3.0.4"
+crashlytics = "3.0.6"
 molecule = "2.1.0"
 cmake = "3.31.6"
 
